--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_MAILCHIMP_URL=""
 REACT_APP_MAILCHIMP_U=""
-REACT_APP_MAILCHIMP_ID=" "
+REACT_APP_MAILCHIMP_ID=""
+REACT_APP_USER="nipcts3@gmail.com"
+REACT_APP_PSWD="llnvxztehmqpoqby"
